<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <parent>
        <groupId>io.memoria</groupId>
        <artifactId>reactive</artifactId>
        <version>0.367.0</version>
    </parent>
    <groupId>io.memoria.reactive</groupId>
    <artifactId>web</artifactId>
    <version>0.367.0</version>
    <packaging>jar</packaging>
    <name>${project.groupId}.${project.artifactId}</name>
    <description>web Module</description>
    <dependencies>
        <!--======================================================================================== -->
        <!-- Modules Dependencies -->
        <!--======================================================================================== -->
        <dependency>
            <groupId>io.memoria.reactive</groupId>
            <artifactId>core</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <!--======================================================================================== -->
        <!-- Library Dependencies -->
        <!--======================================================================================== -->
        <dependency>
            <groupId>io.projectreactor.netty</groupId>
            <artifactId>reactor-netty</artifactId>
        </dependency>
    </dependencies>
</project>

